Closed Bug 1336641 Opened 8 years ago Closed 8 years ago

Crash early in aurora and nightly for imap sync helpers that will crash anyway later.

Categories

(MailNews Core :: Networking: IMAP, defect)

defect
Not set
normal

Tracking

(thunderbird52 wontfix, thunderbird53 fixed, thunderbird54 fixed)

RESOLVED FIXED
Thunderbird 54.0
Tracking Status
thunderbird52 --- wontfix
thunderbird53 --- fixed
thunderbird54 --- fixed

People

(Reporter: rkent, Assigned: rkent)

References

Details

Attachments

(1 file)

We're fighting some threading related crashed in IMAP (See bug 1335638 for example), but the null receiver causing the crash is set earlier, and we don't really see the root cause. Crash earlier to get better feedback. We might change these to MOZ_RELEASE_ASSERT later (or should we just do it now?) if we are convinced that these issues will cause a crash eventually anyway.
This will crash at the time that the proxy is being created, so that we can get crash stats with a useful history. Otherwise we are just going to crash later I believe when the object is used with null mReceiver. It would not take much to convince me to make the a MOZ_RELEASE_ASSERT now, since it seems to me that we'll crash anyway, so we might as well do it when it is useful.
Assignee: nobody → rkent
Status: NEW → ASSIGNED
Attachment #8833555 - Flags: review?(jorgk)
See Also: → 1332606
Comment on attachment 8833555 [details] [diff] [review] crash earlier with null receiver in aurora and nightly Nice, thanks for looking into it. On an unrelated note: Aleth is finding those leaks (bug 1334874), one by one, slowly but surely. Three leaks found, 6 of 14 failing tests fixed. So we're really cleaning up some legacy problems here.
Attachment #8833555 - Flags: review?(jorgk) → review+
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 54.0
Attachment #8833555 - Flags: approval-comm-aurora+
Kent, are you sure you don't want to uplift this to beta and ESR given the useful results we're getting, see bug 1335638 comment #10.
Flags: needinfo?(rkent)
My fear for uplift to release is that we might start getting lots of unexpected crashes that we were not getting before. In other words, I never fully trust my own analysis "Otherwise we are just going to crash later I believe when the object is used with null mReceiver.". Uplift will do no good (or have not effect), instead we have to change to a release crash and not a diagnostic crash.
Flags: needinfo?(rkent)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: