Bug 1336641 - crash earlier with null IMAP sync helper receiver. r=jorgk